--- a/docs/UsingPlantUml.adoc
+++ b/docs/UsingPlantUml.adoc
@@ -72,5 +72,5 @@ end box
 As GitHub has not implemented native support for PlantUML, we export all of our diagrams as images to avoid external
 dependencies. The PlantUML integration plugin supports exporting individual files through its GUI.
 
-The gradle task `plantUmlIO` is provided to export all the diagrams in `docs/diagrams` to `docs/images`. You will
+The gradle task `plantUml` is provided to export all the diagrams in `docs/diagrams` to `docs/images`. You will
 need to `git add` the generated diagrams.
